force-app/main/default/objects/SurveyTemplate__c/SurveyTemplate__c.object-meta.xml
<CustomObject>
    <label>SurveyTemplate</label>
    <nameField>
        <label>SurveyTemplate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SurveyTemplate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>