force-app/main/default/objects/SurveyTemplate__c/fields/ApplicantType__c.field-meta.xml
<CustomField>
    <fullName>ApplicantType__c</fullName>
    <description>Applicant Type</description>
    <label>Applicant Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Joint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>