force-app/main/default/objects/SurveyTemplate__c/fields/FinancialProduct__c.field-meta.xml
<CustomField>
    <fullName>FinancialProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Financial Product Linked</description>
    <label>FinancialProduct</label>
    <referenceTo>FinancialProduct__c</referenceTo>
    <relationshipLabel>Survey Templates</relationshipLabel>
    <relationshipName>SurveyTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>