force-app/main/default/objects/SurveyTemplate__c/fields/SubCategory__c.field-meta.xml
<CustomField>
    <fullName>SubCategory__c</fullName>
    <label>Sub Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>