force-app/main/default/objects/SurveyTemplate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>ApplicantType__c</columns>
    <columns>EventIdentifier__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>